<resources>
    <string name="app_name">Conciencia _ecologica</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Ingresa tu contraseña</string>
    <string name="olvidaste">¿Olvidaste tu contraseña?</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="sesion">Iniciar Sesión</string>
    <string name="menu">menu principal</string>
    <string name="email">Escribe tu e-mail</string>
    <string name="climatico">Cambio Climático</string>
    <string name="reciclaje">Reciclaje</string>
    <string name="conservacion">Conservación del Agua</string>
    <string name="energias">Energías Renovables</string>
    <string name="biodiversidad">Biodiversidad</string>
    <string name="movilidad">Movilidad Sostenible</string>
    <string name="agricultura">Agricultura Sostenible</string>
    <string name="consumo">Consumo Responsable</string>
    <string name="papel">Papel y Cartón</string>
    <string name="plastico">Plástico</string>
    <string name="electronicos">Electrónicos</string>
    <string name="ropa">Ropa</string>
    <string name="aceite">Aceite</string>
    <string name="muebles">Muebles</string>
    <string name="cambio">Iniciemos el cambio</string>
    <string name="siguiente">Siguiente</string>
    <string name="logo_ecoapp">logo ecoapp</string>
    <string name="bolsas">bolsas</string>
    <string name="gestiona">Gestiona los residuos facilmente</string>
    <string name="contribuye">Contribuye al cuidado del medio ambiente desde tu hogar.</string>
    <string name="impacto">Un pequeño esfuerzo, un gran impacto: Ayúdanos a cuidar el medio ambiente.</string>
    <string name="cambio_climatico">Cambio Climático</string>
    <string name="explora">Explora qué es el cambio climático, sus causas y efectos en el planeta.</string>
    <string name="reciclaje_title">Reciclaje</string>
    <string name="fomentamos">Fomentamos la práctica del reciclaje y su importancia para el medio ambiente.</string>
    <string name="volver_atras">volver atras</string>
    <string name="personas_separando">personas separando residuos solidos</string>
    <string name="dejar_correr">Dejar correr el agua mientras te cepillas los dientes</string>
    <string name="tomar_duchas">Tomar duchas de más de 10 minutos</string>
    <string name="lavar_el_auto">Lavar el auto con la manguera abierta</string>
    <string name="reparar_goteras">Reparar goteras y fugas en grifos y tuberías</string>
    <string name="acciones">¿Cuál de las siguientes acciones es más efectiva para ahorrar agua en el hogar?</string>
    <string name="conservacion_agua">Conservación del Agua</string>
    <string name="cclimatico">Cambio Climático</string>
    <string name="salir_sesion">Cerrar Sesión</string>
    <string name="inicio_de_sesion">Inicio de Sesión</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta? Regístrate</string>
    <string name="biodiversidad_title">Biodiversidad</string>
    <string name="texto_energias_renovables">Informamos sobre las energías renovables y su papel en la sostenibilidad.</string>
    <string name="titulo_energias_renovables">Energías Renovables</string>
    <string name="aprende">Aprende</string>
    <string name="titulo_climatico">Recomendaciones para proteger la biodiversidad</string>
    <string name="tips_climatico_1">1. Concienciarse sobre su importancia y lo que perdemos al dañarla</string>
    <string name="tips_climatico_2">2. No adquirir especies exóticas, ni mucho menos abandonarlas</string>
    <string name="tips_climatico_3">3. Asumir las tres erres ecológicas </string>
    <string name="tips_climatico_4">4. Consumir productos sostenibles</string>
    <string name="tips_climatico_5">5. Actuar de forma responsable en la naturaleza</string>
    <string name="tips_climatico_6">6. Apoyar a organizaciones conservacionistas</string>
    <string name="tips_climatico_7">7. Reclamar a nuestros políticos más acciones </string>
    <string name="tips_climatico_8">8. Denunciar actividades que atenten contra la biodiversidad</string>
    <string name="agua">El agua es un recurso vital para la vida en nuestro planeta. Sin embargo, su disponibilidad se ve amenazada por el crecimiento poblacional, el cambio climático y la contaminación. Por esta razón, la conservación del agua se ha convertido en un imperativo global que requiere la atención y acción de cada uno de nosotros.</string>
    <string name="enviar">Enviar</string>
    <string name="cuidar_agua">Adoptar prácticas sostenibles no solo beneficia a nuestro entorno, sino que también garantiza que este recurso esencial esté disponible para todos. Al cuidar el agua, estamos cuidando nuestro futuro.</string>
    <string name="investiga">Investiga</string>
    <string name="formulario">Formulario</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="ingrese_su_direcc">Ingrese su dirección</string>
    <string name="ingrese_su_tel">Ingrese su teléfono</string>
    <string name="ingrese_su_correo">Ingrese su correo electrónico</string>
    <string name="sistemas_de_energia">Elige el sistema de energía renovable</string>
    <string name="enviar_solicitud">Enviar solicitud</string>
    <string name="tipo_de_vivienda">Tipo de vivienda</string>
    <string name="biodiversidad_pregunta">¿Cuál de las siguientes afirmaciones describe mejor la biodiversidad?</string>
    <string name="biodiversidad_1">La biodiversidad se refiere únicamente a la variedad de especies de plantas en un ecosistema.</string>
    <string name="biodiversidad_2">La biodiversidad incluye la variedad de especies, la diversidad genética y la diversidad de ecosistemas en un área determinada.</string>
    <string name="biodiversidad_3">La biodiversidad es la cantidad de recursos naturales disponibles en un país.</string>
    <string name="biodiversidad_4">La biodiversidad es la cantidad de recursos naturales disponibles en un país.</string>
    <string name="Titulo_desventajas_climatico">Desventajas del cambio climático</string>
    <string name="consecuencia_1">1. Fenómenos Meteorológicos Extremos: Huracanes, sequías e inundaciones más frecuentes e intensos, causando daños devastadores.</string>
    <string name="consecuencia_2">2. Pérdida de Biodiversidad: Miles de especies en peligro de extinción debido a la alteración de sus hábitats.</string>
    <string name="consecuencia_3">3. Desplazamiento de Poblaciones: Millones de \"refugiados climáticos\" forzados a abandonar sus hogares.</string>
    <string name="consecuencia_4">4. Problemas de Salud: Enfermedades relacionadas con el clima y mayor riesgo de mortalidad por olas de calor.</string>
    <string name="consecuencia_5">5. Inseguridad Alimentaria: Escasez de alimentos y precios más altos debido a la disminución de la producción agrícola.</string>
    <string name="consecuencia_6">6. Aumento del Nivel del Mar: Amenaza para áreas costeras y pequeñas islas por el derretimiento de glaciares y hielo polar.</string>
    <string name="consecuencia_7">7. Desertificación: Pérdida de suelos fértiles, afectando la agricultura y la disponibilidad de agua.</string>
    <string name="consecuencia_8">8. Desigualdad Social: Las comunidades más vulnerables sufren las peores consecuencias, agravando la pobreza global.</string>
    <string name="pregunta_cambio_climatico">¿Cuál de las siguientes afirmaciones es una causa principal del cambio climático?</string>
    <string name="cclimatico_1">La disminución de la población mundial.</string>
    <string name="cclimatico_2">El aumento de las emisiones de gases de efecto invernadero debido a actividades humanas.</string>
    <string name="cclimatico_3">La expansión de áreas protegidas en el mundo.</string>
    <string name="cclimatico_4">La mejora de las tecnologías de energía renovable.</string>
    <string name="recuerda_contrasena">Reestablece tu contraseña</string>
    <string name="escribe_correo">Escribe tu correo</string>
    <string name="ingresa_contrasena">Escribe una contraseña nueva</string>
    <string name="confirma_contrasena">Confirma tu nueva contraseña </string>
    <string name="reestablecer_contrasena">Reestablecer Contraseña</string>
    <string name="marketplace">Marketplace</string>
    <string name="titulo_marketplace">MarketPlace</string>
    <string name="texto_marketplace">La energía solar goza de numerosos beneficios que la sitúan como una de las más prometedoras formas de contribuir con el medio ambiente, el desarrollo sostenible y a la generación de empleo en las zonas en que se implanta.</string>
    <string name="TiendaSolar">Tienda Solar</string>

</resources>