<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".biodiversidad81">

    <ImageView
        android:id="@+id/imageBefore"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/transparente"
        android:contentDescription="@string/volver_atras"
        app:layout_constraintEnd_toStartOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/navigate_before" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="268dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_ecoapp" />

    <TextView
        android:id="@+id/TituloConservacion"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/titulo_climatico"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <ImageView
        android:id="@+id/imageViewLagartija"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/proteccion_biodiversidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TituloConservacion" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/imageViewLagartija"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textViewTip_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tips_climatico_1"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewTip_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tips_climatico_2"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewTip_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tips_climatico_3"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewTip_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tips_climatico_4"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewTip_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tips_climatico_5"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewTip_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tips_climatico_6"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewTip_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tips_climatico_7"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewTip_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tips_climatico_8"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewParrafo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/biodiversidad_pregunta"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/RadioGroupPreguntas"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:cornerRadius="12dp">

                <RadioButton
                    android:id="@+id/radioButtonCepillas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:paddingEnd="10dp"
                    android:text="@string/biodiversidad_1" />

                <RadioButton
                    android:id="@+id/radioButtonDuchas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:paddingEnd="10dp"
                    android:text="@string/biodiversidad_2" />

                <RadioButton
                    android:id="@+id/radioButtonManguera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:paddingEnd="10dp"
                    android:text="@string/biodiversidad_3" />

                <RadioButton
                    android:id="@+id/radioButtonGoteras"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:paddingEnd="10dp"
                    android:text="@string/biodiversidad_4" />
            </RadioGroup>

            <Button
                android:id="@+id/buttonEnviar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/aquamarine"
                android:drawableEnd="@drawable/vector_navigate_next_white"
                android:text="@string/enviar"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="12dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>